2007-05-10  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 4.15 released.

2007-05-10  Per Abrahamsen  <abraham@dina.kvl.dk>

	* root_system.C (MxNO3Up): Changed default value from 2.5e-8 to
	2.5e-7.

2007-05-10  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 4.14 released.

2007-05-10  Per Abrahamsen  <abraham@dina.kvl.dk>

	* txt/Makefile (tutorial.dvi, tutorial.pdf, exercises.pdf) 
	(exercises.dvi): Added dependencies on other documents.

	* toplevel.C, toplevel.h (parse_system_file): New member function.
	* toplevel.C (parse_file): Use it.
	* ui_Qt_run.C (attach): Ditto.

	* toplevel.C (get_daisy_home): New function.
	(initialize_once): Use it.
	(install_directory): New parameter.

	* setup.nsi: Added start menu links to tutorial and exercises
	documentation, and added a sample setup file to the desktop.

2007-05-08  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 4.13 released.

2007-05-03  Per Abrahamsen  <abraham@dina.kvl.dk>

	* lib/log-Qt.dai: New log parameterization file.
	* lib/Makefile (TEXT): Added it.

2007-04-16  Per Abrahamsen  <abraham@dina.kvl.dk>

	* run.C, run.h: New base.
	* Makefile (OTHER): Add it.

2007-04-12  Per Abrahamsen  <abraham@dina.kvl.dk>

	* ui_Qt.C: New special model.

	* ui.C, ui.h: New component.
	* Makefile (COMPONENTS): Add it.

2007-04-11  Per Abrahamsen  <abraham@dina.kvl.dk>

	* treelog_text.h, treelog_text.C: New utility.
	* Makefile (OTHER): Add it.

	* treelog_store.h, treelog_store.C: New utility.
	* Makefile (OTHER): Add it.

	* treelog_stream.h, treelog_stream.C: No longer used.
	* Makefile (OTHER): Removed it.

	* treelog_dual.h, treelog_dual.C: No longer used.
	* Makefile (OTHER): Removed it.

2007-03-30  Per Abrahamsen  <abraham@dina.kvl.dk>

	* intrinsics.C, intrinsics.h: New utility.
	* Makefile (OTHER): Added it.
	* metalib.C, librarian.C: Use it.
	
2007-03-29  Per Abrahamsen  <abraham@dina.kvl.dk>

	* log.C, log.h (metalib, initialize_common): New functions.
	* output.C (initialize): Update caller.
