@@ -23,10 +23,12 @@
 #include "number.h"
 #include "syntax.h"
 #include "alist.h"
+#include "plf.h"
 #include "units.h"
 #include "vcheck.h"
 #include "mathlib.h"
 #include "memutils.h"
+#include "block.h"
 #include "librarian.h"
 #include <sstream>
 #include <memory>
@@ -228,6 +230,44 @@ static struct NumberSqrSyntax
     Librarian::add_type (Number::component, "sqr", alist, syntax, &make);
   }
 } NumberSqr_syntax;
+
+struct NumberPLF : public NumberOperand
+{
+  PLF plf;
+
+  // Simulation.
+  double value (const Scope& scope) const
+  { 
+    const double v = operand->value (scope);
+    return plf (v); 
+  }
+
+  // Create.
+  NumberPLF (Block& al)
+    : NumberOperand (al),
+      plf (al.plf ("plf"))
+  { }
+};
+
+static struct NumberPLFSyntax
+{
+  static Model& make (Block& al)
+  { return *new NumberPLF (al); }
+  NumberPLFSyntax ()
+  {
+    Syntax& syntax = *new Syntax ();
+    AttributeList& alist = *new AttributeList ();
+
+    alist.add ("description", 
+	       "Look up argumen in a piecewise linear function.");
+    syntax.add_object ("operand", Number::component,
+                       "Operand for this function.");
+    syntax.add ("plf", Syntax::Unknown () , Syntax::Unknown (),
+                Syntax::Const, "PLF to look up argument in.");
+    syntax.order ("operand");
+    Librarian::add_type (Number::component, "sqr", alist, syntax, &make);
+  }
+} NumberPLF_syntax;
 
 struct NumberPow : public Number
 {
